syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ukg.surge.multilanguage.protobuf";

message State {
  bytes payload = 1;
}

message Command {
  string aggregateId = 1;
  bytes payload = 2;
}

message Event {
  string aggregateId = 1;
  bytes payload = 2;
}

message ProcessCommandRequest {
  State state = 1;
  Command command = 2;
}

message ProcessCommandReply {
  repeated Event events = 1;
  string rejection = 2;
}

message HandleEventRequest {
  State state = 1;
  Event event = 2;
}

message HandleEventResponse {
  State state = 1;
}

message ForwardCommandRequest {
  Command command = 1;
}

message ForwardCommandReply {
  bool isSuccess = 1;
  string rejectionMessage = 2;
  State newState = 3;
}

service MultilanguageGatewayService {
  rpc ForwardCommand (ForwardCommandRequest) returns (ForwardCommandReply) {}
}

service BusinessLogicService {
  rpc ProcessCommand (ProcessCommandRequest) returns (ProcessCommandReply) {}
  rpc HandleEvent (HandleEventRequest) returns (HandleEventResponse) {}
}
