syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ukg.surge.poc";

message Photo {
    string caption = 1;
    int32 numPeople = 2;
}

message TagPerson {
    string personName = 1;
}

message PersonTagged {
    string personName = 1;
}
